<resources>
    <string name="app_name">Smart Shop</string>
    <string name="detail">Detail</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="about">About</string>
    <string name="ini_halaman_kedua">ini halaman kedua</string>
    <string name="iqbal_fariz_novirianto">Iqbal Fariz Novirianto</string>
    <string name="iqball_frz_gmail_com">iqball.frz@gmail.com</string>
    <string name="ini_halaman_ketiga">Ini halaman ketiga</string>
    <string name="ini_detail">Ini Detail</string>
    <string name="bagian_kiri">bagian kiri</string>
    <string name="ini_bagian_kanan">Ini bagian kanan</string>
    <string name="nama">Nama</string>
    <string name="berat_barang">berat barang</string>
    <string name="harga_barang">harga barang</string>
    <string name="stok">Stok</string>
    <string name="ini_untuk_stok">ini untuk stok</string>
    <string name="berat">Berat</string>
    <string name="merek">Merek</string>
    <string name="ini_untuk_merek">ini untuk merek</string>
    <string name="dikirim_dari">Dikirim dari</string>
    <string name="asal_pengiriman">asal pengiriman</string>
    <string name="kadaluarsa">Kadaluarsa</string>
    <string name="ini_untuk_kadaluarsa">ini untuk kadaluarsa</string>
    <string name="beli">beli</string>
</resources>